--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -1,8 +1,7 @@
 name: Deploy React to AWS
 on:
   push:
-    branches:
-      - "Docker-compose-CI/CD-AWS-Beanstalk"
+    branches: main
 
 jobs:
   deploy:
